--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Instrument Practice Tracker
 description: "August 2023 to June 2024"
 owner_name: Nighthawk Coders
 github_username: nighthawkcoders
-repository: IKAN2025/student
+repository: IKAN2025/frontend
 baseurl: ""
 remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
